--- a/index.html
+++ b/index.html
@@ -11,15 +11,60 @@
   <div class="page">
     <header class="header">
       <img src="./images/logo.svg" alt="Место" class="header__logo">
+      <div class="header__line"></div>
     </header>
     <main class="page">
-      <section class="profile"></section>
+      <section class="profile">
+        <img src="./images/Avatar.jpg" alt="" class="profile__avatar">
+        <div class="profile__info">
+          <h1 class="profile__title">Жак-Ив Кусто</h1>
+        <img src="./images/Edit-Button.svg" alt="Редактировать профиль" class="profile__edit-button">
+        </div>
+        <p class="profile__subtitle">Исследователь океана</p>
+        <img src="./images/add-button.svg" alt="" class="profile__add-button">
+        <img src="./images/Add-Button-mini.svg" alt="Редактировать профиль" class="profile__edit-button profile__edit-button_mini">
+      </section>
       <section class="elements">
         <div class="element">
-          <img src="" alt="" class="element__image">
+          <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
           <div class="element__bottom-block">
-            <h2 class="element__title"></h2>
-            <img src="./images/like.svg" alt="Лайк" class="element__like">
+            <h2 class="element__title">Карачаевск</h2>
+            <img src="./images/like.svg" alt="Лайк" class="element__like-image">
+          </div>
+        </div>
+        <div class="element">
+          <img src="./images/Elbrus.png" alt="Гора Эльбрус" class="element__image">
+          <div class="element__bottom-block">
+            <h2 class="element__title">Гора Эльбрус</h2>
+            <img src="./images/like.svg" alt="Лайк" class="element__like-image">
+          </div>
+        </div>
+        <div class="element">
+          <img src="./images/Dombai.png" alt="Домбай" class="element__image">
+          <div class="element__bottom-block">
+            <h2 class="element__title">Домбай</h2>
+            <img src="./images/like.svg" alt="Лайк" class="element__like-image">
+          </div>
+        </div>
+        <div class="element">
+          <img src="./images/karachaevsk.jpg" alt="" class="element__image">
+          <div class="element__bottom-block">
+            <h2 class="element__title">Карачаевск</h2>
+            <img src="./images/like.svg" alt="Лайк" class="element__like-image">
+          </div>
+        </div>
+        <div class="element">
+          <img src="./images/karachaevsk.jpg" alt="" class="element__image">
+          <div class="element__bottom-block">
+            <h2 class="element__title">Карачаевск</h2>
+            <img src="./images/like.svg" alt="Лайк" class="element__like-image">
+          </div>
+        </div>
+        <div class="element">
+          <img src="./images/karachaevsk.jpg" alt="" class="element__image">
+          <div class="element__bottom-block">
+            <h2 class="element__title">Карачаевск</h2>
+            <img src="./images/like.svg" alt="Лайк" class="element__like-image">
           </div>
         </div>
       </section>
