--- a/index.html
+++ b/index.html
@@ -18,53 +18,53 @@
         <img src="./images/Avatar.jpg" alt="" class="profile__avatar">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
-        <img src="./images/Edit-Button.svg" alt="Редактировать профиль" class="profile__edit-button">
+        <img src="./images/Edit-Button.svg" alt="Редактировать профиль" class="profile__edit-button opacity-link">
         </div>
         <p class="profile__subtitle">Исследователь океана</p>
-        <img src="./images/add-button.svg" alt="" class="profile__add-button">
-        <img src="./images/Add-Button-mini.svg" alt="Редактировать профиль" class="profile__edit-button profile__edit-button_mini">
+        <img src="./images/add-button.svg" alt="" class="profile__add-button opacity-link">
+        <img src="./images/Add-Button-mini.svg" alt="Редактировать профиль" class="profile__edit-button profile__edit-button_mini opacity-link">
       </section>
       <section class="elements">
         <div class="element">
           <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
           <div class="element__bottom-block">
             <h2 class="element__title">Карачаевск</h2>
-            <img src="./images/like.svg" alt="Лайк" class="element__like-image">
+            <div class="element__like-image"></div>
           </div>
         </div>
         <div class="element">
           <img src="./images/Elbrus.png" alt="Гора Эльбрус" class="element__image">
           <div class="element__bottom-block">
             <h2 class="element__title">Гора Эльбрус</h2>
-            <img src="./images/like.svg" alt="Лайк" class="element__like-image">
+            <div class="element__like-image"></div>
           </div>
         </div>
         <div class="element">
           <img src="./images/Dombai.png" alt="Домбай" class="element__image">
           <div class="element__bottom-block">
             <h2 class="element__title">Домбай</h2>
-            <img src="./images/like.svg" alt="Лайк" class="element__like-image">
+            <div class="element__like-image"></div>
           </div>
         </div>
         <div class="element">
           <img src="./images/karachaevsk.jpg" alt="" class="element__image">
           <div class="element__bottom-block">
             <h2 class="element__title">Карачаевск</h2>
-            <img src="./images/like.svg" alt="Лайк" class="element__like-image">
+            <div class="element__like-image"></div>
           </div>
         </div>
         <div class="element">
           <img src="./images/karachaevsk.jpg" alt="" class="element__image">
           <div class="element__bottom-block">
             <h2 class="element__title">Карачаевск</h2>
-            <img src="./images/like.svg" alt="Лайк" class="element__like-image">
+            <div class="element__like-image"></div>
           </div>
         </div>
         <div class="element">
           <img src="./images/karachaevsk.jpg" alt="" class="element__image">
           <div class="element__bottom-block">
             <h2 class="element__title">Карачаевск</h2>
-            <img src="./images/like.svg" alt="Лайк" class="element__like-image">
+            <div class="element__like-image"></div>
           </div>
         </div>
       </section>
@@ -73,5 +73,15 @@
       <p class="footer__copyright">&copy; 2021. Андрей Иванов</p>
     </footer>
   </div>
+  <div class="popup ">
+    <section class="popup__window ">
+      <button class="popup__close-button"></button>
+      <section class="popup__content">
+        <h3 class="popup__title">Редактировать профиль</h3>
+        <button class="popup__save-button">Сохранить</button>
+      </section>
+    </section>
+  </div>
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
