--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="element">
           <img src="./images/karachaevsk.jpg" alt="" class="element__image">
           <div class="element__bottom-block">
-            <h2 class="element__title">Карачаевск</h2>
+            <h2 class="element__title">Карачаево-Черкессия</h2>
             <div class="element__like-image"></div>
           </div>
         </div>
@@ -73,11 +73,15 @@
       <p class="footer__copyright">&copy; 2021. Андрей Иванов</p>
     </footer>
   </div>
-  <div class="popup ">
+  <div class="popup">
     <section class="popup__window ">
       <button class="popup__close-button"></button>
       <section class="popup__content">
         <h3 class="popup__title">Редактировать профиль</h3>
+        <input type="text" class="popup__input-name">
+        <div class="popup__line"></div>
+        <input type="text" class="popup__input-about">
+        <div class="popup__line"></div>
         <button class="popup__save-button">Сохранить</button>
       </section>
     </section>
