--- a/index.html
+++ b/index.html
@@ -11,18 +11,16 @@
   <div class="page">
     <header class="header">
       <img src="./images/logo.svg" alt="Место" class="header__logo">
-      <div class="header__line"></div>
     </header>
     <main class="page">
       <section class="profile">
-        <img src="./images/Avatar.jpg" alt="" class="profile__avatar">
+        <img src="./images/Avatar.jpg" alt="Аватар" class="profile__avatar">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
-        <img src="./images/Edit-Button.svg" alt="Редактировать профиль" class="profile__edit-button opacity-link">
+          <button class="profile__edit-button set-opacity-60"></button>
         </div>
         <p class="profile__subtitle">Исследователь океана</p>
-        <img src="./images/add-button.svg" alt="" class="profile__add-button opacity-link">
-        <img src="./images/Add-Button-mini.svg" alt="Редактировать профиль" class="profile__edit-button profile__edit-button_mini opacity-link">
+        <button class="profile__add-button set-opacity-60"></button>
       </section>
       <section class="elements">
         <div class="element">
@@ -75,14 +73,16 @@
   </div>
   <div class="popup">
     <section class="popup__window ">
-      <button class="popup__close-button"></button>
+      <button class="popup__close-button set-opacity-60"></button>
       <section class="popup__content">
         <h3 class="popup__title">Редактировать профиль</h3>
-        <input type="text" class="popup__input-name">
-        <div class="popup__line"></div>
-        <input type="text" class="popup__input-about">
-        <div class="popup__line"></div>
-        <button class="popup__save-button">Сохранить</button>
+        <form class="popup__form">
+          <input type="text" class="popup__input-name">
+          <div class="popup__line"></div>
+          <input type="text" class="popup__input-about">
+          <div class="popup__line"></div>
+          <button class="popup__save-button">Сохранить</button>
+        </form>
       </section>
     </section>
   </div>
