--- a/index.html
+++ b/index.html
@@ -17,74 +17,71 @@
         <img src="./images/Avatar.jpg" alt="Аватар" class="profile__avatar">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
-          <button class="profile__edit-button set-opacity-60"></button>
+          <button type="button" class="profile__edit-button set-opacity-60"></button>
         </div>
         <p class="profile__subtitle">Исследователь океана</p>
-        <button class="profile__add-button set-opacity-60"></button>
+        <button type="button" class="profile__add-button set-opacity-60"></button>
       </section>
-      <section class="elements">
-        <div class="element">
+      <ul class="elements">
+        <li class="element">
           <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
           <div class="element__bottom-block">
             <h2 class="element__title">Карачаевск</h2>
-            <div class="element__like-image"></div>
+            <button class="element__like"></button>
           </div>
-        </div>
-        <div class="element">
+        </li>
+        <li class="element">
           <img src="./images/Elbrus.png" alt="Гора Эльбрус" class="element__image">
           <div class="element__bottom-block">
             <h2 class="element__title">Гора Эльбрус</h2>
-            <div class="element__like-image"></div>
+            <button class="element__like"></button>
           </div>
-        </div>
-        <div class="element">
+        </li>
+        <li class="element">
           <img src="./images/Dombai.png" alt="Домбай" class="element__image">
           <div class="element__bottom-block">
             <h2 class="element__title">Домбай</h2>
-            <div class="element__like-image"></div>
+            <button class="element__like"></button>
           </div>
-        </div>
-        <div class="element">
-          <img src="./images/karachaevsk.jpg" alt="" class="element__image">
+        </li>
+        <li class="element">
+          <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
           <div class="element__bottom-block">
             <h2 class="element__title">Карачаево-Черкессия</h2>
-            <div class="element__like-image"></div>
+            <button class="element__like"></button>
           </div>
-        </div>
-        <div class="element">
-          <img src="./images/karachaevsk.jpg" alt="" class="element__image">
+        </li>
+        <li class="element">
+          <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
           <div class="element__bottom-block">
             <h2 class="element__title">Карачаевск</h2>
-            <div class="element__like-image"></div>
+            <button class="element__like"></button>
           </div>
-        </div>
-        <div class="element">
-          <img src="./images/karachaevsk.jpg" alt="" class="element__image">
+        </li>
+        <li class="element">
+          <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
           <div class="element__bottom-block">
             <h2 class="element__title">Карачаевск</h2>
-            <div class="element__like-image"></div>
+            <button class="element__like"></button>
           </div>
-        </div>
-      </section>
+        </li>
+      </ul>
     </main>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2021. Андрей Иванов</p>
     </footer>
   </div>
   <div class="popup">
-    <section class="popup__window ">
-      <button class="popup__close-button set-opacity-60"></button>
-      <section class="popup__content">
-        <h3 class="popup__title">Редактировать профиль</h3>
-        <form class="popup__form">
-          <input type="text" class="popup__input-name">
-          <div class="popup__line"></div>
-          <input type="text" class="popup__input-about">
-          <div class="popup__line"></div>
-          <button class="popup__save-button">Сохранить</button>
-        </form>
-      </section>
+    <section class="popup__content">
+      <button type="button" class="popup__close-button set-opacity-60"></button>
+      <h3 class="popup__title">Редактировать профиль</h3>
+      <form name="popup-form" class="popup__form">
+        <input name="form-name" type="text" class="popup__input popup__input_type_name" placeholder="Жак-Ив Кусто">
+        <input name="form-about" type="text" class="popup__input popup__input_type_about" placeholder="Исследователь океана">
+        <button type="submit" class="popup__save-button">Сохранить</button>
+      </form>
     </section>
+
   </div>
   <script src="./scripts/index.js"></script>
 </body>
