hotfix: исправление ошибок 0.3

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <img src="./images/Avatar.jpg" alt="Аватар" class="profile__avatar">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
-          <button type="button" class="profile__edit-button set-opacity-60"></button>
+          <button type="button" class="profile__edit-button"></button>
         </div>
         <p class="profile__subtitle">Исследователь океана</p>
-        <button type="button" class="profile__add-button set-opacity-60"></button>
+        <button type="button" class="profile__add-button"></button>
       </section>
       <ul class="elements">
         <li class="element">
@@ -73,7 +73,7 @@
   </div>
   <div class="popup">
     <section class="popup__content">
-      <button type="button" class="popup__close-button set-opacity-60"></button>
+      <button type="button" class="popup__close-button"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
       <form name="popup-form" class="popup__form">
         <input name="form-name" type="text" class="popup__input popup__input_type_name" placeholder="Жак-Ив Кусто">
