--- a/index.html
+++ b/index.html
@@ -22,50 +22,52 @@
         <p class="profile__subtitle">Исследователь океана</p>
         <button type="button" class="profile__add-button"></button>
       </section>
-      <ul class="elements">
-        <li class="element">
-          <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
-          <div class="element__bottom-block">
-            <h2 class="element__title">Карачаевск</h2>
-            <button class="element__like"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img src="./images/Elbrus.png" alt="Гора Эльбрус" class="element__image">
-          <div class="element__bottom-block">
-            <h2 class="element__title">Гора Эльбрус</h2>
-            <button class="element__like"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img src="./images/Dombai.png" alt="Домбай" class="element__image">
-          <div class="element__bottom-block">
-            <h2 class="element__title">Домбай</h2>
-            <button class="element__like"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
-          <div class="element__bottom-block">
-            <h2 class="element__title">Карачаево-Черкессия</h2>
-            <button class="element__like"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
-          <div class="element__bottom-block">
-            <h2 class="element__title">Карачаевск</h2>
-            <button class="element__like"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
-          <div class="element__bottom-block">
-            <h2 class="element__title">Карачаевск</h2>
-            <button class="element__like"></button>
-          </div>
-        </li>
-      </ul>
+      <section class="elements">
+        <ul class="elements__list">
+          <li class="element">
+            <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
+            <div class="element__bottom-block">
+              <h2 class="element__title">Карачаевск</h2>
+              <button type="button" class="element__like"></button>
+            </div>
+          </li>
+          <li class="element">
+            <img src="./images/Elbrus.png" alt="Гора Эльбрус" class="element__image">
+            <div class="element__bottom-block">
+              <h2 class="element__title">Гора Эльбрус</h2>
+              <button type="button" class="element__like"></button>
+            </div>
+          </li>
+          <li class="element">
+            <img src="./images/Dombai.png" alt="Домбай" class="element__image">
+            <div class="element__bottom-block">
+              <h2 class="element__title">Домбай</h2>
+              <button type="button" class="element__like"></button>
+            </div>
+          </li>
+          <li class="element">
+            <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
+            <div class="element__bottom-block">
+              <h2 class="element__title">Карачаево-Черкессия</h2>
+              <button type="button" class="element__like"></button>
+            </div>
+          </li>
+          <li class="element">
+            <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
+            <div class="element__bottom-block">
+              <h2 class="element__title">Карачаевск</h2>
+              <button type="button" class="element__like"></button>
+            </div>
+          </li>
+          <li class="element">
+            <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
+            <div class="element__bottom-block">
+              <h2 class="element__title">Карачаевск</h2>
+              <button type="button" class="element__like"></button>
+            </div>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2021. Андрей Иванов</p>
@@ -76,8 +78,8 @@
       <button type="button" class="popup__close-button"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
       <form name="popup-form" class="popup__form">
-        <input name="form-name" type="text" class="popup__input popup__input_type_name" placeholder="Жак-Ив Кусто">
-        <input name="form-about" type="text" class="popup__input popup__input_type_about" placeholder="Исследователь океана">
+        <input name="form-name" type="text" class="popup__input" placeholder="Жак-Ив Кусто">
+        <input name="form-about" type="text" class="popup__input" placeholder="Исследователь океана">
         <button type="submit" class="popup__save-button">Сохранить</button>
       </form>
     </section>
