feet: document.createElement

--- a/index.html
+++ b/index.html
@@ -83,8 +83,16 @@
         <button type="submit" class="popup__save-button">Сохранить</button>
       </form>
     </section>
-
   </div>
+  <template class="element__template">
+    <li class="element">
+      <img src="#" alt="#" class="element__image">
+      <div class="element__bottom-block">
+        <h2 class="element__title">#</h2>
+        <button type="button" class="element__like"></button>
+      </div>
+    </li>
+  </template>
   <script src="./scripts/index.js"></script>
 </body>
 </html>
