feet: element template start

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </section>
       <section class="elements">
         <ul class="elements__list">
-          <li class="element">
+          <!-- <li class="element">
             <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
             <div class="element__bottom-block">
               <h2 class="element__title">Карачаевск</h2>
@@ -65,7 +65,7 @@
               <h2 class="element__title">Карачаевск</h2>
               <button type="button" class="element__like"></button>
             </div>
-          </li>
+          </li> -->
         </ul>
       </section>
     </main>
@@ -86,6 +86,7 @@
   </div>
   <template class="element__template">
     <li class="element">
+      <button type="button" class="element__trash"></button>
       <img src="#" alt="#" class="element__image">
       <div class="element__bottom-block">
         <h2 class="element__title">#</h2>
