feet: добавлена иконка trash

--- a/index.html
+++ b/index.html
@@ -24,48 +24,6 @@
       </section>
       <section class="elements">
         <ul class="elements__list">
-          <!-- <li class="element">
-            <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
-            <div class="element__bottom-block">
-              <h2 class="element__title">Карачаевск</h2>
-              <button type="button" class="element__like"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img src="./images/Elbrus.png" alt="Гора Эльбрус" class="element__image">
-            <div class="element__bottom-block">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <button type="button" class="element__like"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img src="./images/Dombai.png" alt="Домбай" class="element__image">
-            <div class="element__bottom-block">
-              <h2 class="element__title">Домбай</h2>
-              <button type="button" class="element__like"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
-            <div class="element__bottom-block">
-              <h2 class="element__title">Карачаево-Черкессия</h2>
-              <button type="button" class="element__like"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
-            <div class="element__bottom-block">
-              <h2 class="element__title">Карачаевск</h2>
-              <button type="button" class="element__like"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
-            <div class="element__bottom-block">
-              <h2 class="element__title">Карачаевск</h2>
-              <button type="button" class="element__like"></button>
-            </div>
-          </li> -->
         </ul>
       </section>
     </main>
@@ -86,8 +44,10 @@
   </div>
   <template class="element__template">
     <li class="element">
-      <button type="button" class="element__trash"></button>
-      <img src="#" alt="#" class="element__image">
+      <div class="element__image-container">
+        <button type="button" class="element__trash"></button>
+        <img src="#" alt="#" class="element__image">
+      </div>
       <div class="element__bottom-block">
         <h2 class="element__title">#</h2>
         <button type="button" class="element__like"></button>
