--- a/index.html
+++ b/index.html
@@ -31,14 +31,25 @@
       <p class="footer__copyright">&copy; 2021. Андрей Иванов</p>
     </footer>
   </div>
-  <div class="popup">
+  <div class="popup popup__profile">
     <section class="popup__content">
       <button type="button" class="popup__close-button"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form name="popup-form" class="popup__form">
+      <form name="popup-form" class="popup__form popup__form-profile">
         <input name="form-name" type="text" class="popup__input" placeholder="Жак-Ив Кусто">
         <input name="form-about" type="text" class="popup__input" placeholder="Исследователь океана">
         <button type="submit" class="popup__save-button">Сохранить</button>
+      </form>
+    </section>
+  </div>
+  <div class="popup popup__add">
+    <section class="popup__content">
+      <button type="button" class="popup__close-button"></button>
+      <h3 class="popup__title">Новое место</h3>
+      <form name="popup-form" class="popup__form">
+        <input name="form-name" type="text" class="popup__input" placeholder="Название">
+        <input name="form-about" type="text" class="popup__input" placeholder="Ссылка на картинку">
+        <button type="submit" class="popup__save-button">Создать</button>
       </form>
     </section>
   </div>
