--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <section class="popup__content">
       <button type="button" class="popup__close-button"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form name="popup-form" class="popup__form">
-        <input name="form-name" type="text" class="popup__input" placeholder="Название">
-        <input name="form-about" type="text" class="popup__input" placeholder="Ссылка на картинку">
+      <form name="popup-form" class="popup__form popup__form-add">
+        <input name="form-title" type="text" class="popup__input" placeholder="Название">
+        <input name="form-link" type="text" class="popup__input" placeholder="Ссылка на картинку">
         <button type="submit" class="popup__save-button">Создать</button>
       </form>
     </section>
