feet: добавлен попап карточек и анимация

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
       </form>
     </section>
   </div>
+  <div class="popup popup__open-image">
+    <section class="popup__image-content">
+      <button type="button" class="popup__close-button"></button>
+      <img src="#" alt="#" class="popup__image">
+      <p class="popup__image-title">#</p>
+    </section>
+  </div>
   <template class="element__template">
     <li class="element">
       <div class="element__image-container">
