--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <p class="footer__copyright">&copy; 2021. Андрей Иванов</p>
     </footer>
   </div>
-  <div class="popup popup__profile">
+  <div class="popup popup_type_profile">
     <section class="popup__content">
       <button type="button" class="popup__close-button"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
@@ -42,7 +42,7 @@
       </form>
     </section>
   </div>
-  <div class="popup popup__add">
+  <div class="popup popup_type_add">
     <section class="popup__content">
       <button type="button" class="popup__close-button"></button>
       <h3 class="popup__title">Новое место</h3>
@@ -53,7 +53,7 @@
       </form>
     </section>
   </div>
-  <div class="popup popup__open-image">
+  <div class="popup popup_type_image">
     <section class="popup__image-content">
       <button type="button" class="popup__close-button"></button>
       <img src="#" alt="#" class="popup__image">
