--- a/index.html
+++ b/index.html
@@ -78,5 +78,6 @@
   </template>
   <script src="./scripts/index.js"></script>
   <script src="./scripts/validate.js"></script>
+  <script src="./scripts/initialcards.js"></script>
 </body>
 </html>
