--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
       </div>
     </li>
   </template>
-  <script src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
   <script src="./scripts/validate.js"></script>
-  <script src="./scripts/initialcards.js"></script>
+  <!-- <script src="./scripts/initialcards.js"></script> -->
 </body>
 </html>
